@@ -25,15 +25,17 @@ import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.level.GameType;
 import net.minecraft.world.phys.Vec3;
-import net.minecraft.world.scores.PlayerScoreEntry;
 import net.minecraft.world.scores.PlayerTeam;
-import net.minecraft.world.scores.ScoreHolder;
+import net.minecraft.world.scores.Score;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
 import static net.mat0u5.lifeseries.Main.*;
 import static net.mat0u5.lifeseries.seasons.other.WatcherManager.isWatcher;
+
+//? if > 1.20.2
+import net.minecraft.world.scores.PlayerScoreEntry;
 
 public class LivesManager {
     public static final String SCOREBOARD_NAME = "Lives";
@@ -189,8 +191,8 @@ public class LivesManager {
         if (!livesTeams.isEmpty()) {
             Collections.sort(livesTeams);
 
-            if (lives <= livesTeams.getFirst()) {
-                return prefix + livesTeams.getFirst();
+            if (lives <= livesTeams.get(0)) {
+                return prefix + livesTeams.get(0);
             }
             Collections.reverse(livesTeams);
             for (int i : livesTeams) {
@@ -240,9 +242,15 @@ public class LivesManager {
 
     public void resetAllPlayerLivesInner() {
         createScoreboards();
-        for (PlayerScoreEntry entry : ScoreboardUtils.getScores(SCOREBOARD_NAME)) {
-            ScoreboardUtils.resetScore(ScoreHolder.forNameOnly(entry.owner()), SCOREBOARD_NAME);
+        //? if <= 1.20.2 {
+        /*for (Score entry : ScoreboardUtils.getScores(SCOREBOARD_NAME)) {
+            ScoreboardUtils.resetScore(entry.getOwner(), SCOREBOARD_NAME);
         }
+        *///?} else {
+        for (PlayerScoreEntry entry : ScoreboardUtils.getScores(SCOREBOARD_NAME)) {
+            ScoreboardUtils.resetScore(entry.owner(), SCOREBOARD_NAME);
+        }
+        //?}
 
         currentSeason.reloadAllPlayerTeams();
     }
@@ -311,13 +319,13 @@ public class LivesManager {
     }
 
     public void setScore(String playerName, int lives) {
-        ScoreboardUtils.setScore(ScoreHolder.forNameOnly(playerName), SCOREBOARD_NAME, lives);
+        ScoreboardUtils.setScore(playerName, SCOREBOARD_NAME, lives);
         currentSeason.reloadAllPlayerTeams();
     }
 
     @Nullable
     public Integer getScoreLives(String playerName) {
-        return ScoreboardUtils.getScore(ScoreHolder.forNameOnly(playerName), SCOREBOARD_NAME);
+        return ScoreboardUtils.getScore(playerName, SCOREBOARD_NAME);
     }
 
     @Nullable
@@ -389,7 +397,7 @@ public class LivesManager {
     public void showDeathTitle(ServerPlayer player) {
         if (SHOW_DEATH_TITLE) {
             String subtitle = seasonConfig.FINAL_DEATH_TITLE_SUBTITLE.get(seasonConfig);
-            PlayerUtils.sendTitleWithSubtitleToPlayers(PlayerUtils.getAllPlayers(), player.getFeedbackDisplayName(), Component.literal(subtitle), 20, 80, 20);
+            PlayerUtils.sendTitleWithSubtitleToPlayers(PlayerUtils.getAllPlayers(), player.getDisplayName(), Component.literal(subtitle), 20, 80, 20);
         }
         Component deathMessage = getDeathMessage(player);
         if (!deathMessage.getString().isEmpty()) {
